--- a/config/application.yml
+++ b/config/application.yml
@@ -3,6 +3,8 @@ defaults: &defaults
   host: "brandizzle.com"
   pagination:
     results_per_page: 15
+  invitations:
+    limit: 5
 
 development:
   <<: *defaults
