--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,7 @@ coverage/*
 coverage.data
 *~
 *.tmproj
-public/stylesheets/master.css
-public/stylesheets/all.css
+public/stylesheets/compiled/*
 rerun.txt
 webrat-*.html
 capybara-*.html
