--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -3,5 +3,6 @@ rerun = File.file?('rerun.txt') ? IO.read('rerun.txt') : ""
 rerun_opts = rerun.to_s.strip.empty? ? "--format progress features" : "--format #{ENV['CUCUMBER_FORMAT'] || 'pretty'} #{rerun}"
 std_opts = "#{rerun_opts} --format rerun --out rerun.txt --strict --tags ~@wip"
 %>
-default: <%= std_opts %>
+autotest: <%= std_opts %>
+default: --tags ~@disabled --tags ~@wip
 wip: --tags @wip:3 --wip features
