--- a/config/application.yml
+++ b/config/application.yml
@@ -5,10 +5,16 @@ defaults: &defaults
     results_per_page: 15
   invitations:
     limit: 0
+  twitter:
+    consumer_key: "foo_consumer_key"
+    consumer_secret: "foo_consumer_secret"
 
 development:
   <<: *defaults
   host: "brandizzle.local"
+  twitter:
+    consumer_key: DOaquy8EyO07RXzqDbKFA
+    consumer_secret: Z4aO0rrOFaNOXWgs9zRIhZvP5BCJK7nEVkfXGPHOo
     
 test:
   <<: *defaults
