Adding Plan configuration for production.

--- a/config/plans.yml
+++ b/config/plans.yml
@@ -17,3 +17,10 @@ cucumber:
 
 aissac:
   <<: *defaults
+
+production:
+  standard:
+    price: 29
+    trial: 30
+    description: Standard
+    id: standard
