Updated compass and pickle. Added Account#have_card_on_file?. Added blueprint grid for aligning the account page panels. Added Plan limits and spec.

--- a/config/plans.yml
+++ b/config/plans.yml
@@ -3,6 +3,8 @@ defaults: &defaults
   standard:
     price: 15
     trial: 30
+    members: 2
+    searches: 6
     description: Standard
     id: standard
 
@@ -21,6 +23,8 @@ aissac:
 production:
   standard:
     price: 29
+    members: 2
     trial: 30
+    searches: 6
     description: Standard
     id: standard
