WIP plan limits: showing search terms and team members limits. Added dependent => destroy to Brand#brand_queries

--- a/config/plans.yml
+++ b/config/plans.yml
@@ -10,6 +10,13 @@ defaults: &defaults
 
 development:
   <<: *defaults
+  standard:
+    price: 29
+    trial: 30
+    members: 2
+    searches: 10
+    description: Standard
+    id: standard
     
 test:
   <<: *defaults
@@ -25,6 +32,6 @@ production:
     price: 29
     members: 2
     trial: 30
-    searches: 6
+    searches: 10
     description: Standard
     id: standard
