--- a/config/application.yml
+++ b/config/application.yml
@@ -3,7 +3,10 @@ defaults: &defaults
   host: "brandpulse.local"
   pagination:
     results_per_page: 15
+  dashboard:
     logs_per_page: 15
+    follow_up_results_number: 10
+    latest_comments_number: 10
   twitter:
     consumer_key: "foo_consumer_key"
     consumer_secret: "foo_consumer_secret"
